feat: add geolocation endpoints
